--- a/template-customizer.html
+++ b/template-customizer.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template Customizer | GameDay Tees</title>
+    <link rel="icon" type="image/png" href="img/gdt-small-logo.png">
     <meta name="description" content="Personalize colors, names, and artwork for your template before it hits the press.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -385,3 +386,4 @@
     </script>
 </body>
 </html>
+
