--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Custom Print Shop - Design and order your custom printed products">
-    <title>Custom Print Shop | Design Your Products</title>
-
+    <title>GameDayTees</title>
+    <link rel="icon" type="image/png" href="img/gdt-small-logo.png">
     <!-- Google Fonts - Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1953,3 +1953,4 @@
     </script>
 </body>
 </html>
+
