--- a/index.html
+++ b/index.html
@@ -249,16 +249,16 @@
                 </div>
                 <div class="grid grid-cols-1 gap-6 text-sm text-center sm:grid-cols-3 sm:gap-8 sm:text-left animate-on-scroll" data-animate="fade-left">
                     <div>
-                        <p class="text-3xl font-semibold text-ink" data-count="72">72</p>
-                        <p class="text-slate-500">Average ship time (hrs)</p>
+                        <p class="text-3xl font-semibold text-ink">Fast</p>
+                        <p class="text-slate-500">Processing Time</p>
                     </div>
                     <div>
-                        <p class="text-3xl font-semibold text-ink" data-count="98">98</p>
-                        <p class="text-slate-500">Reorder rate %</p>
+                        <p class="text-3xl font-semibold text-ink">High</p>
+                        <p class="text-slate-500">Customer Satisfaction</p>
                     </div>
                     <div>
-                        <p class="text-3xl font-semibold text-ink" data-count="312">312</p>
-                        <p class="text-slate-500">Teams suited up</p>
+                        <p class="text-3xl font-semibold text-ink">Many</p>
+                        <p class="text-slate-500">Teams Served</p>
                     </div>
                 </div>
             </div>
@@ -309,7 +309,7 @@
         <div class="absolute inset-y-0 right-10 w-72 bg-gradient-to-b from-blue-100 to-transparent rounded-[34px]" data-parallax="0.05"></div>
         <div class="max-w-6xl mx-auto px-6 text-center space-y-8 relative animate-on-scroll" data-animate="zoom">
             <p class="text-xs font-semibold tracking-widest text-blue-600 uppercase">Trusted nationwide</p>
-            <p class="text-3xl font-semibold text-[#222831]">Youth programs from <span class="text-blue-600">Chicago</span> to <span class="text-orange-500">Phoenix</span> rely on our studio.</p>
+            <p class="text-3xl font-semibold text-[#222831]">Youth sports programs <span class="text-blue-600">nationwide</span> trust our quality and service.</p>
             <div class="grid grid-cols-1 gap-6 text-slate-500 text-sm uppercase tracking-wide sm:grid-cols-2 md:grid-cols-4">
                 <p>High schools</p>
                 <p>Club travel</p>
@@ -1162,24 +1162,24 @@
             <div class="bg-gray-900 rounded-2xl p-12 text-white animate-on-scroll">
                 <div class="grid grid-cols-1 gap-8 text-center sm:grid-cols-2 md:grid-cols-4">
                     <div>
-                        <div class="text-4xl font-bold mb-2" data-count="100">100K+</div>
-                        <div class="text-gray-400">Schools Served</div>
+                        <div class="text-4xl font-bold mb-2">Growing</div>
+                        <div class="text-gray-400">Customer Base</div>
                     </div>
                     <div>
                         <div class="text-4xl font-bold mb-2" data-count="3">3 Days</div>
-                        <div class="text-gray-400">Average Delivery</div>
+                        <div class="text-gray-400">Turnaround Time</div>
                     </div>
                     <div>
-                        <div class="text-4xl font-bold mb-2 flex items-center justify-center gap-2" data-count="4.9">
-                            <span>4.9</span>
+                        <div class="text-4xl font-bold mb-2 flex items-center justify-center gap-2">
                             <svg class="w-7 h-7 text-amber-300" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
-                                <path d="M9.049 2.927a1 1 0 011.902 0l1.286 3.966a1 1 0 00.95.69h4.063a1 1 0 01.588 1.806l-3.29 2.39a1 1 0 00-.364 1.118l1.287 3.966a1 1 0 01-1.538 1.118L10 14.347l-3.923 2.634a1 1 0 01-1.538-1.118l1.287-3.966a1 1 0 00-.364-1.118l-3.29-2.39a1 1 0 01.588-1.806h4.063a1 1 0 00.95-.69l1.286-3.966z"/>
+                                <path d="M9.049 2.927a1 1 0 011.902 0l1.286 3.966a1 1 0 00.95.69h4.063a1 1 0 01.588 1.806l-3.29 2.39a1 1 0 00-.364 1.118l1.287 3.966a1 1 0 01-1.538 1.118L10 14.347l-3.923 2.634a1 1 0 01-1.538-1.118l1.287-3.966a1 1 0 00-.364-1.118l-3.29-2.39a1 1 0 01.588-1.806h4063a1 1 0 00.95-.69l1.286-3.966z"/>
                             </svg>
+                            <span>Highly Rated</span>
                         </div>
-                        <div class="text-gray-400">Parent Rating</div>
+                        <div class="text-gray-400">By Customers</div>
                     </div>
                     <div>
-                        <div class="text-4xl font-bold mb-2">$<span data-count="1">1</span>M+</div>
+                        <div class="text-4xl font-bold mb-2">$<span  data-count="1">1</span>M+</div>
                         <div class="text-gray-400">Polaris Press Value</div>
                     </div>
                 </div>
@@ -1217,20 +1217,6 @@
                     <p class="text-sm text-slate-500">Turnaround dashboard</p>
                     <p class="text-5xl font-semibold text-[#222831] mt-4" data-count="72">72h</p>
                     <p class="text-slate-500">Avg ship speed &#183; last 90 days</p>
-                    <div class="mt-6 grid grid-cols-1 gap-6 text-center text-sm text-slate-600 sm:grid-cols-3">
-                        <div>
-                            <p class="text-2xl text-[#222831] font-semibold" data-count="1240">1,240</p>
-                            <p>Shirts</p>
-                        </div>
-                        <div>
-                            <p class="text-2xl text-[#222831] font-semibold" data-count="24">24</p>
-                            <p>Sports</p>
-                        </div>
-                        <div>
-                            <p class="text-2xl text-ink font-semibold" data-count="0">0</p>
-                            <p>Missed deadlines</p>
-                        </div>
-                    </div>
                 </div>
                 <div class="rounded-3xl border border-white/60 bg-white/80 p-6 shadow-lg animate-on-scroll" data-animate="fade-left">
                     <p class="text-[#222831] font-semibold text-lg">What you get</p>
@@ -1808,27 +1794,27 @@
                 </div>
             </div>
             <div class="animate-on-scroll" data-animate="fade-up">
-                <p class="text-ink font-semibold mb-3">Explore</p>
+                <p class="text-gray-900 font-semibold mb-3">Explore</p>
                 <ul class="space-y-2">
-                    <li><a href="#how-it-works" class="hover:text-ink">Workflow</a></li>
-                    <li><a href="#process" class="hover:text-ink">Production Lab</a></li>
-                    <li><a href="#faq" class="hover:text-ink">Guarantee</a></li>
+                    <li><a href="#how-it-works" class="hover:text-gray-900">Workflow</a></li>
+                    <li><a href="#process" class="hover:text-gray-900">Production Lab</a></li>
+                    <li><a href="#faq" class="hover:text-gray-900">Guarantee</a></li>
                 </ul>
             </div>
             <div class="animate-on-scroll" data-animate="fade-up">
-                <p class="text-ink font-semibold mb-3">Support</p>
+                <p class="text-gray-900 font-semibold mb-3">Support</p>
                 <ul class="space-y-2">
-                    <li><a href="#" class="hover:text-ink">Track order</a></li>
-                    <li><a href="#" class="hover:text-ink">Size guide</a></li>
-                    <li><a href="#" class="hover:text-ink">Returns</a></li>
+                    <li><a href="#" class="hover:text-gray-900">Track order</a></li>
+                    <li><a href="#" class="hover:text-gray-900">Size guide</a></li>
+                    <li><a href="#" class="hover:text-gray-900">Returns</a></li>
                 </ul>
             </div>
             <div class="animate-on-scroll" data-animate="fade-left">
-                <p class="text-ink font-semibold mb-3">Social</p>
+                <p class="text-gray-900 font-semibold mb-3">Social</p>
                 <div class="flex gap-4 text-slate-500">
-                    <a href="#" class="hover:text-ink">Instagram</a>
-                    <a href="#" class="hover:text-ink">TikTok</a>
-                    <a href="#" class="hover:text-ink">YouTube</a>
+                    <a href="#" class="hover:text-gray-900">Instagram</a>
+                    <a href="#" class="hover:text-gray-900">TikTok</a>
+                    <a href="#" class="hover:text-gray-900">YouTube</a>
                 </div>
             </div>
         </div>
@@ -1953,4 +1939,3 @@
     </script>
 </body>
 </html>
-
