--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <div class="grid grid-cols-1 gap-6 text-sm text-center sm:grid-cols-3 sm:gap-8 sm:text-left animate-on-scroll" data-animate="fade-left">
                     <div>
                         <p class="text-3xl font-semibold text-ink"><span data-count="3">3</span> days</p>
-                        <p class="text-slate-500">Processing Time</p>
+                        <p class="text-slate-500">Delivery Time</p>
                     </div>
                     <div>
                         <p class="text-3xl font-semibold text-ink">High</p>
@@ -1939,4 +1939,5 @@
     </script>
 </body>
 </html>
+
 
