--- a/index.html
+++ b/index.html
@@ -1171,9 +1171,7 @@
                     </div>
                     <div>
                         <div class="text-4xl font-bold mb-2 flex items-center justify-center gap-2">
-                            <svg class="w-7 h-7 text-amber-300" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
-                                <path d="M9.049 2.927a1 1 0 011.902 0l1.286 3.966a1 1 0 00.95.69h4.063a1 1 0 01.588 1.806l-3.29 2.39a1 1 0 00-.364 1.118l1.287 3.966a1 1 0 01-1.538 1.118L10 14.347l-3.923 2.634a1 1 0 01-1.538-1.118l1.287-3.966a1 1 0 00-.364-1.118l-3.29-2.39a1 1 0 01.588-1.806h4063a1 1 0 00.95-.69l1.286-3.966z"/>
-                            </svg>
+                            <svg class="w-7 h-7" xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 36 36"><path fill="#FFAC33" d="M27.287 34.627c-.404 0-.806-.124-1.152-.371L18 28.422l-8.135 5.834a1.97 1.97 0 0 1-2.312-.008a1.971 1.971 0 0 1-.721-2.194l3.034-9.792l-8.062-5.681a1.98 1.98 0 0 1-.708-2.203a1.978 1.978 0 0 1 1.866-1.363L12.947 13l3.179-9.549a1.976 1.976 0 0 1 3.749 0L23 13l10.036.015a1.975 1.975 0 0 1 1.159 3.566l-8.062 5.681l3.034 9.792a1.97 1.97 0 0 1-.72 2.194a1.957 1.957 0 0 1-1.16.379z"/></svg>
                             <span>Highly Rated</span>
                         </div>
                         <div class="text-gray-400">By Customers</div>
@@ -1939,6 +1937,7 @@
     </script>
 </body>
 </html>
+
 
 
 
