--- a/template-customizer.html
+++ b/template-customizer.html
@@ -70,7 +70,7 @@
     <main class="flex mx-auto mt-8 md:mt-16 lg:mt-18 py-16 pb-28 bg-gradient-to-b from-slate-50 via-white to-slate-100">
         <div class="px-4 sm:px-6 space-y-10 overflow-y-hidden">
             <section class="grid gap-8 md:grid-cols-1 xl:grid-cols-[1.1fr_1.2fr] max-w-7xl mx-auto">
-                <div class="workspace-panel rounded-[32px] px-2 py-4 md:p-8 text-white relative overflow-hidden bg-slate-900" id="template-preview-panel">
+                <div class="workspace-panel h-fit rounded-[32px] px-2 py-4 md:p-8 text-white relative overflow-hidden bg-slate-900" id="template-preview-panel">
                     <div class="flex flex-col md:flex-row items-center justify-between mb-6">
                         <div class="px-3 py-1 rounded-full bg-white/10 border border-white/20 text-xs uppercase tracking-[0.3em]">Preview</div>
                         <div class="flex gap-2">
@@ -386,5 +386,6 @@
     </script>
 </body>
 </html>
+
 
 
