--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
                     </button>
 
                     <!-- CTA Button (Desktop) -->
-                    <a href="#start" class="hidden lg:flex items-center gap-2 px-5 py-2.5 ml-2 text-sm font-semibold text-white bg-gradient-to-r from-blue-600 to-indigo-600 rounded-xl shadow-lg shadow-blue-500/30 hover:shadow-xl hover:shadow-blue-500/40 hover:from-blue-700 hover:to-indigo-700 transition-all duration-200 hover:scale-105 active:scale-95">
+                    <a href="#products" class="hidden lg:flex items-center gap-2 px-5 py-2.5 ml-2 text-sm font-semibold text-white bg-gradient-to-r from-blue-600 to-indigo-600 rounded-xl shadow-lg shadow-blue-500/30 hover:shadow-xl hover:shadow-blue-500/40 hover:from-blue-700 hover:to-indigo-700 transition-all duration-200 hover:scale-105 active:scale-95">
                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
                         </svg>
-                        <span>Start Design</span>
+                        <span>Pick Template</span>
                     </a>
                 </div>
             </div>
@@ -196,11 +196,11 @@
 
                     <!-- Mobile Action Buttons -->
                     <div class="pt-4 space-y-2">
-                        <a href="#start" class="flex items-center justify-center gap-2 px-5 py-3.5 text-sm font-semibold text-white bg-gradient-to-r from-blue-600 to-indigo-600 rounded-xl shadow-lg shadow-blue-500/30 hover:shadow-xl hover:shadow-blue-500/40 transition-all duration-200">
+                        <a href="#products" class="flex items-center justify-center gap-2 px-5 py-3.5 text-sm font-semibold text-white bg-gradient-to-r from-blue-600 to-indigo-600 rounded-xl shadow-lg shadow-blue-500/30 hover:shadow-xl hover:shadow-blue-500/40 transition-all duration-200">
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
                             </svg>
-                            Start Design
+                            Pick Template
                         </a>
                         <a href="#how-it-works" class="flex items-center justify-center gap-2 px-5 py-3.5 text-sm font-semibold text-gray-700 border-2 border-gray-200 rounded-xl bg-white hover:border-blue-300 hover:bg-blue-50 hover:text-blue-600 transition-all duration-200">
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -250,7 +250,7 @@
                 <div class="grid grid-cols-1 gap-6 text-sm text-center sm:grid-cols-3 sm:gap-8 sm:text-left animate-on-scroll" data-animate="fade-left">
                     <div>
                         <p class="text-3xl font-semibold text-ink"><span data-count="3">3</span> days</p>
-                        <p class="text-slate-500">Delivery Time</p>
+                        <p class="text-slate-500">Processing Time</p>
                     </div>
                     <div>
                         <p class="text-3xl font-semibold text-ink">High</p>
@@ -891,7 +891,7 @@
                                 <div class="animate-on-scroll">
                                     <div class="text-sm font-semibold text-gray-500 mb-3">PREMIUM PRINTED SHIRT</div>
                                     <div class="aspect-[3/4] bg-gradient-to-br from-gray-800 to-gray-900 rounded-2xl p-6 sm:p-8 flex items-center justify-center relative overflow-hidden shadow-2xl">
-                                        <div class="rounded-2xl border border-slate-100 bg-cover bg-no-repeat bg-center p-10 sm:p-16 lg:p-32 flex flex-col justify-between w-full h-full" style="background-image: url('img/mock-ups/sample3-mockup.png');"></div>
+                                        <div class="rounded-2xl border border-slate-100 bg-cover bg-no-repeat bg-center p-10 sm:p-16 lg:p-32 flex flex-col justify-between w-full h-full" style="background-image: url('img/mock-ups/sample2-mockup.png');"></div>
                                     </div>
                                 </div>
                             </div>
@@ -1170,7 +1170,7 @@
                         <div class="text-gray-400">Turnaround Time</div>
                     </div>
                     <div>
-                        <div class="text-4xl font-bold mb-2 flex items-center justify-center gap-2">
+                        <div class="text-4xl font-bold mb-2 flex items-center justify-center">
                             <svg class="w-7 h-7" xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 36 36"><path fill="#FFAC33" d="M27.287 34.627c-.404 0-.806-.124-1.152-.371L18 28.422l-8.135 5.834a1.97 1.97 0 0 1-2.312-.008a1.971 1.971 0 0 1-.721-2.194l3.034-9.792l-8.062-5.681a1.98 1.98 0 0 1-.708-2.203a1.978 1.978 0 0 1 1.866-1.363L12.947 13l3.179-9.549a1.976 1.976 0 0 1 3.749 0L23 13l10.036.015a1.975 1.975 0 0 1 1.159 3.566l-8.062 5.681l3.034 9.792a1.97 1.97 0 0 1-.72 2.194a1.957 1.957 0 0 1-1.16.379z"/></svg>
                             <span>Highly Rated</span>
                         </div>
@@ -1937,7 +1937,3 @@
     </script>
 </body>
 </html>
-
-
-
-
