--- a/index.html
+++ b/index.html
@@ -443,10 +443,6 @@
                                                 <div class="aspect-[3/4] bg-gradient-to-br from-gray-800 to-gray-900 rounded-lg overflow-hidden relative">
                                                     <div class="absolute inset-0 bg-cover bg-center opacity-90" style="background-image: url('img/templates/voll1_sample.jpg');"></div>
                                                 </div>
-                                                <div class="mt-2 text-center">
-                                                    <div class="text-xs font-semibold text-gray-700">Volleyball Classic</div>
-                                                    <div class="text-[10px] text-gray-500">2-Photo Layout</div>
-                                                </div>
                                             </div>
                                             <!-- Selected Indicator -->
                                             <div class="absolute -top-2 -right-2 w-7 h-7 bg-purple-600 rounded-full flex items-center justify-center shadow-lg ring-4 ring-purple-100">
@@ -458,61 +454,25 @@
 
                                         <!-- Template Option 2 -->
                                         <div class="bg-white rounded-xl p-3 shadow-md border-2 border-gray-200 transform transition-all duration-300 hover:scale-105 hover:border-purple-300 cursor-pointer opacity-75 hover:opacity-100">
-                                            <div class="aspect-[3/4] bg-gradient-to-br from-blue-800 to-blue-900 rounded-lg overflow-hidden relative">
-                                                <div class="absolute inset-0 flex items-center justify-center">
-                                                    <div class="text-center space-y-2">
-                                                        <div class="w-16 h-12 bg-white/20 rounded mx-auto"></div>
-                                                        <div class="w-20 h-20 bg-white/30 rounded mx-auto"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="mt-2 text-center">
-                                                <div class="text-xs font-semibold text-gray-700">Action Hero</div>
-                                                <div class="text-[10px] text-gray-500">Large Photo</div>
+                                            <div class="aspect-[3/4] rounded-lg bg-contain overflow-hidden relative" style="background-image: url('img/templates/bask1_sample.jpg');">
                                             </div>
                                         </div>
 
                                         <!-- Template Option 3 -->
                                         <div class="bg-white rounded-xl p-3 shadow-md border-2 border-gray-200 transform transition-all duration-300 hover:scale-105 hover:border-purple-300 cursor-pointer opacity-75 hover:opacity-100">
-                                            <div class="aspect-[3/4] bg-gradient-to-br from-red-800 to-orange-800 rounded-lg overflow-hidden relative">
+                                            <div class="aspect-[3/4] rounded-lg bg-contain overflow-hidden relative" style="background-image: url('img/templates/hockey1_sample.jpg');">
                                                 <div class="absolute inset-0 flex items-center justify-center">
-                                                    <div class="text-center space-y-2">
-                                                        <div class="w-24 h-16 bg-white/30 rounded mx-auto"></div>
-                                                        <div class="w-16 h-12 bg-white/20 rounded mx-auto"></div>
-                                                    </div>
                                                 </div>
-                                            </div>
-                                            <div class="mt-2 text-center">
-                                                <div class="text-xs font-semibold text-gray-700">Team Spirit</div>
-                                                <div class="text-[10px] text-gray-500">Split Layout</div>
                                             </div>
                                         </div>
 
                                         <!-- Template Option 4 -->
                                         <div class="bg-white rounded-xl p-3 shadow-md border-2 border-gray-200 transform transition-all duration-300 hover:scale-105 hover:border-purple-300 cursor-pointer opacity-75 hover:opacity-100">
-                                            <div class="aspect-[3/4] bg-gradient-to-br from-green-800 to-teal-800 rounded-lg overflow-hidden relative">
+                                            <div class="aspect-[3/4] rounded-lg bg-contain overflow-hidden relative" style="background-image: url('img/templates/foot1_sample.jpg');">
                                                 <div class="absolute inset-0 flex items-center justify-center">
-                                                    <div class="grid grid-cols-2 gap-1 p-4">
-                                                        <div class="bg-white/25 rounded aspect-square"></div>
-                                                        <div class="bg-white/25 rounded aspect-square"></div>
-                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="mt-2 text-center">
-                                                <div class="text-xs font-semibold text-gray-700">Side by Side</div>
-                                                <div class="text-[10px] text-gray-500">Equal Photos</div>
-                                            </div>
                                         </div>
-                                    </div>
-
-                                    <!-- CTA Button -->
-                                    <div class="pt-4">
-                                        <button class="w-full bg-purple-600 text-white font-semibold py-3 rounded-xl shadow-lg hover:bg-purple-700 transition-colors duration-200 flex items-center justify-center gap-2">
-                                            <span>Continue with Selected</span>
-                                            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path>
-                                            </svg>
-                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -636,7 +596,7 @@
                                                 <div class="space-y-3 flex-1">
                                                     <!-- Photo 1 with animation -->
                                                     <div class="bg-white rounded-xl p-3 shadow-lg transform transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
-                                                        <div class="relative rounded-lg border-2 border-slate-100 h-28 bg-cover bg-center overflow-hidden" style="background-image: url('img/youthpose.png');">
+                                                        <div class="relative rounded-lg border-2 border-slate-100 h-48 bg-contain bg-no-repeat bg-center overflow-hidden" style="background-image: url('img/youthpose.png');">
                                                             <div class="absolute top-1 right-1 w-5 h-5 bg-green-500 rounded-full flex items-center justify-center ring-2 ring-white">
                                                                 <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7"></path>
@@ -651,7 +611,7 @@
 
                                                     <!-- Photo 2 with animation -->
                                                     <div class="bg-white rounded-xl p-3 shadow-lg transform transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
-                                                        <div class="relative rounded-lg border-2 border-slate-100 h-28 bg-cover bg-center overflow-hidden" style="background-image: url('img/youthaction.png');">
+                                                        <div class="relative rounded-lg border-2 border-slate-100 h-48 bg-contain bg-no-repeat bg-center overflow-hidden" style="background-image: url('img/youthaction.png');">
                                                             <div class="absolute top-1 right-1 w-5 h-5 bg-green-500 rounded-full flex items-center justify-center ring-2 ring-white">
                                                                 <svg class="w-3 h-3 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7"></path>
@@ -662,13 +622,6 @@
                                                             <span class="text-[10px] font-medium text-gray-700">Photo 2: Action</span>
                                                             <span class="text-[9px] text-green-600 font-semibold">Uploaded</span>
                                                         </div>
-                                                    </div>
-                                                </div>
-
-                                                <!-- Continue Button -->
-                                                <div class="mt-auto pt-3">
-                                                    <div class="bg-blue-600 text-white text-center py-2.5 rounded-lg text-xs font-semibold shadow-lg">
-                                                        Continue to Print →
                                                     </div>
                                                 </div>
                                             </div>
@@ -891,7 +844,7 @@
                                 <div class="animate-on-scroll">
                                     <div class="text-sm font-semibold text-gray-500 mb-3">PREMIUM PRINTED SHIRT</div>
                                     <div class="aspect-[3/4] bg-gradient-to-br from-gray-800 to-gray-900 rounded-2xl p-6 sm:p-8 flex items-center justify-center relative overflow-hidden shadow-2xl">
-                                        <div class="rounded-2xl border border-slate-100 bg-cover bg-no-repeat bg-center p-10 sm:p-16 lg:p-32 flex flex-col justify-between w-full h-full" style="background-image: url('img/mock-ups/sample2-mockup.png');"></div>
+                                        <div class="rounded-2xl border border-slate-100 bg-cover bg-no-repeat bg-center p-10 sm:p-16 lg:p-32 flex flex-col justify-between w-full h-full" style="background-image: url('img/mock-ups/sample3-mockup.png');"></div>
                                     </div>
                                 </div>
                             </div>
