--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body class="bg-gray-50 overflow-x-hidden" style="font-family: 'Poppins', sans-serif;">
     <!-- Enhanced Professional Navbar -->
-    <header id="navbar" class="fixed top-0 left-0 right-0 z-50 bg-white/95 backdrop-blur-md border-b border-gray-100 transition-all duration-300">
+    <header id="navbar" class="fixed top-0 left-0 right-0 z-50 bg-white/95 backdrop-blur-md border-b border-gray-300 transition-all duration-300">
         <nav class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-18">
                 <!-- Logo with Enhanced Hover Effect -->
@@ -142,14 +142,6 @@
                         </svg>
                         <span id="cart-count" class="absolute -top-1 -right-1 flex items-center justify-center min-w-[1.25rem] h-5 px-1 text-xs font-bold text-white bg-gradient-to-r from-blue-600 to-blue-700 rounded-full shadow-lg ring-2 ring-white transform transition-transform group-hover:scale-110">0</span>
                     </button>
-
-                    <!-- CTA Button (Desktop) -->
-                    <a href="#products" class="hidden lg:flex items-center gap-2 px-5 py-2.5 ml-2 text-sm font-semibold text-white bg-gradient-to-r from-blue-600 to-indigo-600 rounded-xl shadow-lg shadow-blue-500/30 hover:shadow-xl hover:shadow-blue-500/40 hover:from-blue-700 hover:to-indigo-700 transition-all duration-200 hover:scale-105 active:scale-95">
-                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
-                        </svg>
-                        <span>Pick Template</span>
-                    </a>
                 </div>
             </div>
 
@@ -193,22 +185,6 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
                         </svg>
                     </a>
-
-                    <!-- Mobile Action Buttons -->
-                    <div class="pt-4 space-y-2">
-                        <a href="#products" class="flex items-center justify-center gap-2 px-5 py-3.5 text-sm font-semibold text-white bg-gradient-to-r from-blue-600 to-indigo-600 rounded-xl shadow-lg shadow-blue-500/30 hover:shadow-xl hover:shadow-blue-500/40 transition-all duration-200">
-                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
-                            </svg>
-                            Pick Template
-                        </a>
-                        <a href="#how-it-works" class="flex items-center justify-center gap-2 px-5 py-3.5 text-sm font-semibold text-gray-700 border-2 border-gray-200 rounded-xl bg-white hover:border-blue-300 hover:bg-blue-50 hover:text-blue-600 transition-all duration-200">
-                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                            </svg>
-                            See Workflow
-                        </a>
-                    </div>
                 </div>
             </div>
         </nav>
@@ -237,8 +213,8 @@
                     </p>
                 </div>
                 <div class="flex flex-col sm:flex-row gap-4 animate-on-scroll" data-animate="fade-left">
-                    <a href="#start" class="flex items-center justify-center gap-3 px-8 py-4 rounded-2xl bg-[#222831] text-white font-semibold text-lg shadow-lg shadow-brand-200/60 btn-glow" data-ripple>
-                        Submit photos
+                    <a href="#products" class="flex items-center justify-center gap-3 px-8 py-4 rounded-2xl bg-[#222831] text-white font-semibold text-lg shadow-lg shadow-brand-200/60 btn-glow" data-ripple>
+                        Explore Templates
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="1.8" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14m-7-7l7 7-7 7" />
                         </svg>
@@ -1462,34 +1438,6 @@
                                             <span class="text-gray-600" style="font-weight: 400;">Allowed Formats:</span>
                                             <span class="font-semibold text-gray-900" style="font-weight: 600;">PNG (with transparency)</span>
                                         </div>
-                                    </div>
-                                </div>
-
-                                <!-- T-Shirt Quality Options -->
-                                <div class="p-4 mb-6 rounded-lg bg-white border border-gray-200">
-                                    <h4 class="mb-3 font-semibold text-gray-900" style="font-weight: 600;">T-Shirt Quality</h4>
-                                    <div class="space-y-3 text-sm">
-                                        <label class="flex items-start justify-between cursor-pointer">
-                                            <span>
-                                                <span class="font-semibold text-gray-900">Premium Cotton</span>
-                                                <span class="block text-xs text-gray-500">Soft 180gsm ring-spun cotton</span>
-                                            </span>
-                                            <input type="radio" name="quality-option" value="premium" class="ml-4 mt-1" checked>
-                                        </label>
-                                        <label class="flex items-start justify-between cursor-pointer">
-                                            <span>
-                                                <span class="font-semibold text-gray-900">Heavyweight Cotton (+$2)</span>
-                                                <span class="block text-xs text-gray-500">Thicker 220gsm classic fit</span>
-                                            </span>
-                                            <input type="radio" name="quality-option" value="heavyweight" class="ml-4 mt-1">
-                                        </label>
-                                        <label class="flex items-start justify-between cursor-pointer">
-                                            <span>
-                                                <span class="font-semibold text-gray-900">Performance DryFit (+$4)</span>
-                                                <span class="block text-xs text-gray-500">Moisture-wicking polyester blend</span>
-                                            </span>
-                                            <input type="radio" name="quality-option" value="performance" class="ml-4 mt-1">
-                                        </label>
                                     </div>
                                 </div>
 
